Finish merge sort and calculate times